finished: add styles, pages, and redirect

--- a/Views/win.html
+++ b/Views/win.html
@@ -5,23 +5,24 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
-        <link rel="stylesheet" href="CSS/styles.css">
+        <link rel="stylesheet" href="../CSS/win.css">
     </head>
 
     <body>
-        <main id="container_main">
+        <main id="container_main" >
             <section class="container_item">
                 <h1>Em que número <strong>Bia</strong> está pensando?</h1>
-                <img src="images/Pensando.svg" alt="">
+                <img src="../images/Acertei.svg" alt="">
             </section>
-            <div class="container-width">
-                <input class="auto-width" name="number" type="text" size="1" maxlength="3">
-            </div>
+            <p>Parabéns o número é: <span id="random_number" ></span></p>
             <p>Seus palpites:</p>
-            <span id="tries"></span>
+            <span id="tries_win"></span>
         </main>
 
 
-        <script src="Script/scripts.js"></script>
+        <script src="../Script/scripts.js">
+            
+
+        </script>
     </body>
 </html>
